--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <body>
     <center>
-        <H1>BYANSI ANTHONY 21/U/0006</H1>
+        <H1>BYANSI ANTHONY Jordan 21/U/0006</H1>
         <P>Byansi Anthony is a first year software engineering student, a tech enthusiastic.</P>
     </center>
     <!-- header -->
