First wave changes made

--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- my fav-icon -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./images/logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <!-- /my fav-icon -->
+    <!-- css bootstrap -->
+    <link rel="stylesheet" href="./bootstrap-5.2.0-beta1-dist/css/bootstrap-grid.css">
     <title>BYANSI ANTHONY 21/U/0006</title>
+    <link rel="stylesheet" href="./style.css">
     <style>
         table,
         th,
@@ -41,7 +49,7 @@
 <body>
     <center>
         <H1>BYANSI ANTHONY 21/U/0006</H1>
-        <P>Byansi Anthony is a first year software engineering student, a tech enthusiastic.</P>
+        <P>Byansi Anthony is a professonal software engineer, a tech enthusiastic, a code addict and a well defined UX and UI designer.</P>
     </center>
     <!-- header -->
     <header>
@@ -55,7 +63,7 @@
                     <div>
                         <ul>
                             <li>
-                                <a>Home</a>
+                                <a href="./landing.html">Home(My landng page)</a>
                             </li>
                             <li>
                                 <a>About me</a>
@@ -80,7 +88,6 @@
                 <div>
                     <div>
                         <img src="./images/profile.jpg" height="100%" width="20%">
-                        <img src="./images/logo.jfif">
                     </div>
                 </div>
                 <div>
@@ -111,7 +118,7 @@
                         <p>When my parents told me I could be anything I wanted to be, I chose to be a Software Engineer. <br> I’m a data structure, who’s looking for a sorting algorithm. <br> I’m a software engineer, with a keen interest in software and
                             hardware, and I also love my keyboard <br> If you’re not coding, you’re just a hobbyist. <br> Keep calm and code on.
                         </p>
-                        <table>
+                        <table class="education-history">
                             <caption>My Accademic Qualifications</caption>
                             <tr>
                                 <th>School of Study</th>
@@ -165,9 +172,9 @@
         </div>
     </section> <br>
     <!-- /about me -->
-    <h2>Contact Me</h2>
+    <h2 class="contact-me">Contact Me</h2>
     <form action="mailto:byansianthony@gmail.com">
-        <div>
+        <div class="contact-me">
             <div>
                 <div>
                     <label class="form-label" for="contact-your-name-2">Your Name</label>
@@ -215,9 +222,10 @@
     </section>
     </footer>
     <!-- /footer about myself -->
-
-
-
+    <!-- js bootstrap -->
+    <script src="./bootstrap-5.2.0-beta1-dist/js/bootstrap.bundle.js"></script>
+    <script src="./bootstrap-5.2.0-beta1-dist/js/bootstrap.js"></script>
+    <!-- /js bootstrap -->
 </body>
 
 </html>
