--- a/hobbies.html
+++ b/hobbies.html
@@ -6,8 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Byansi Anthony 21/U/0006</title>
-    <!-- This is basically describes my logo icon in the  -->
-    <link rel="icon" href="./images/logo.png">
+    <!-- my fav-icon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <!-- /my fav-icon -->
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./bootstrap-5.2.0-beta1-dist/css/bootstrap-grid.css">
 </head>
 <!-- This is where myb bodyb begins from -->
 
@@ -91,9 +97,12 @@
         </section>
     </footer>
     <!-- /footer about myself -->
-
+    <script src="./bootstrap-5.2.0-beta1-dist/js/bootstrap.bundle.js"></script>
+    <script src="./bootstrap-5.2.0-beta1-dist/js/bootstrap.js"></script>
 
 </body>
 <!--End of my body description   -->
+
+</html>
 
 </html>
